--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "connect4-server",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,6 +18,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mysql": "^2.18.1"
-  }
+    "mysql": "^2.18.1",
+    "pm2": "^4.5.0"
+  },
+  "devDependencies": {},
+  "description": ""
 }
